--- a/.drone.yml
+++ b/.drone.yml
@@ -12,9 +12,20 @@ steps:
 - name: publish
  image: plugins/docker
  settings:
-   repo: magalixcorp/k8scicd
+   repo: harbor.local.unixexpo.com/drone-test/
    tags: [ "${DRONE_COMMIT_SHA:0:7}","latest" ]
    username:
      from_secret: docker_username
    password:
      from_secret: docker_password
+- name: deliver
+ image: sinlead/drone-kubectl
+ settings:
+   kubernetes_server:
+     from_secret: kubernetes_server
+   kubernetes_cert:
+     from_secret: kubernetes_cert
+   kubernetes_token:
+     from_secret: kubernetes_token
+ commands:
+   - kubectl apply -f deployment.yml
