--- a/deployment.yml
+++ b/deployment.yml
@@ -30,7 +30,7 @@ spec:
    spec:
      containers:
      - name: app
-       image: "magalixcorp/k8scicd"
+       image: "harbor.local.unixexpo.com/drone-test/"
        resources:
          requests:
            cpu: 10m
