--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,8 @@ steps:
 - name: publish
   image: plugins/docker
   settings:
-    repo: harbor.local.unixexpo.com/drone-test/
+    registry: harbor.local.unixexpo.com
+    repo: drone-test/myapp
     tags: [ "${DRONE_COMMIT_SHA:0:7}","latest" ]
     username:
       from_secret: docker_username
