--- a/deployment.yml
+++ b/deployment.yml
@@ -30,8 +30,7 @@ spec:
    spec:
      containers:
      - name: app
-       image: "harbor.local.unixexpo.com/drone-test/my-app"
-       tag: latest
+       image: "harbor.local.unixexpo.com/drone-test/my-app:latest"
        resources:
          requests:
            cpu: 10m
