--- a/.drone.yml
+++ b/.drone.yml
@@ -30,7 +30,7 @@ steps:
     kubernetes_token:
       from_secret: kubernetes_token
   commands:
-    - kubectl apply -f deployment.yml
+    - kubectl apply -n drone -f deployment.yml
     
 
 
